<resources>
    <string name="app_name">Vehicle Management</string>
    <string name="welcome_message">Welcome to Fleetio</string>
    <string name="btn_view">View Vehicles</string>
    <string name="fuel_type_name">Fuel Type: %s</string>
    <string name="fuel_volume_units">Fuel Volume Units: %s</string>
    <string name="image_url">Image Url: %s</string>
    <string name="account_id">AccountId: %s</string>
    <string name="status_name">Status: %s</string>
    <string name="type_name">Type: %s</string>
    <string name="year_name">Year: %s</string>
    <string name="group_name">Group: %s</string>
    <string name="meter_value">Current Meter: %1$s %2$s</string>
    <string name="plate_name">License Plate: %s</string>
    <string name="sort_options">Sort Options:</string>
    <string name="name_header">Name:</string>
    <string name="asc_option">ASC</string>
    <string name="desc_option">DESC</string>
    <string name="created_at_header">Created At:</string>
    <string name="updated_at_header">Updated At:</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="filter_options_header">Filter Options</string>
    <string name="name">Name</string>
    <string name="license_plate">License Plate</string>
    <string name="vin">VIN</string>
    <string name="label">Label</string>
    <string name="reset_filters_option">Clear Filters</string>
</resources>