<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".filter.SortFilterFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_submit"
            app:layout_constraintTop_toTopOf="@id/filter_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sort_options_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/sort_options"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name_option_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/name_header"
                    app:layout_constraintStart_toStartOf="@id/sort_options_header"
                    app:layout_constraintTop_toBottomOf="@id/sort_options_header" />

                <ToggleButton
                    android:id="@+id/name_option_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textOff="@string/desc_option"
                    android:textOn="@string/asc_option"
                    app:layout_constraintBottom_toBottomOf="@+id/name_option_header"
                    app:layout_constraintStart_toEndOf="@+id/sort_options_header"
                    app:layout_constraintTop_toTopOf="@id/name_option_header" />

                <TextView
                    android:id="@+id/created_at_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/created_at_header"
                    app:layout_constraintStart_toStartOf="@id/name_option_header"
                    app:layout_constraintTop_toBottomOf="@id/name_option_button" />

                <ToggleButton
                    android:id="@+id/created_at_option_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/desc_option"
                    android:textOn="@string/asc_option"
                    app:layout_constraintBottom_toBottomOf="@+id/created_at_header"
                    app:layout_constraintStart_toStartOf="@+id/name_option_button"
                    app:layout_constraintTop_toTopOf="@id/created_at_header" />

                <TextView
                    android:id="@+id/updated_at_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/updated_at_header"
                    app:layout_constraintStart_toStartOf="@id/name_option_header"
                    app:layout_constraintTop_toBottomOf="@id/created_at_option_button" />

                <ToggleButton
                    android:id="@+id/updated_at_option_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/desc_option"
                    android:textOn="@string/asc_option"
                    app:layout_constraintBottom_toBottomOf="@+id/updated_at_header"
                    app:layout_constraintStart_toStartOf="@+id/name_option_button"
                    app:layout_constraintTop_toTopOf="@id/updated_at_header" />

                <TextView
                    android:id="@+id/filter_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/filter_options_header"
                    app:layout_constraintStart_toStartOf="@id/updated_at_header"
                    app:layout_constraintTop_toBottomOf="@id/updated_at_option_button" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/name"
                    app:layout_constraintTop_toBottomOf="@id/filter_header">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/plate_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/license_plate"
                    app:layout_constraintTop_toBottomOf="@id/name_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/plate_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/vin_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/vin"
                    app:layout_constraintTop_toBottomOf="@id/plate_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/vin_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/vin_input_layout">

                    <AutoCompleteTextView
                        android:id="@+id/label_options"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label"
                        android:inputType="none"
                        android:padding="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/light_green"
            android:text="@string/apply_filter"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>